# poglink

./: .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  bot.py  config.yaml  docker-compose.yaml  entrypoint.sh  init-config.sh  init-docker.sh  last_bans.txt  pyproject.toml  requirements.dev.txt  requirements.txt  run-docker.sh  sample-config.yaml  setup.cfg  setup.py  setup.sh  token.txt
.github/workflows/: main.yml  pub-dev.yml
ark_discord_bot/: __init__.py  bot.py  config.py  main.py  models.py  utils.py
ark_discord_bot/cogs/: __init__.py  bans.py  rates.py  test.py
cogs/: bans.py  rates.py  test.py
data/: last_bans.txt  last_dynamicconfig.json  last_rates.json  last_xbox_smalltribes_dynamicconfig.json
docs/: TODO.md  configuration.md  docker-installation.md  native-installation.md  prerequisites.md  systemd-installation.md
docs/setup/: docker.md  native.md
local/: config_template.yaml
poglink/: __init__.py  bot.py  config.py  error.py  main.py  models.py  utils.py
poglink/cogs/: bans.py  rates.py  test.py
poglink/models/: __init__.py  bans.py  rates.py
resources/: poglink.service
scripts/: docker-build.sh  install-service.sh  python-publish.sh
tests/: conftest.py  test_httpserver_dynamic.py
tests/data/: application-config-1.json  application-config-1.yaml  application-config-2.yaml  application-config-broken.yaml  bansummary-1.txt  bansummary-2.txt  bansummary-changed.txt  dynamicconfig-1.ini  dynamicconfig-2.ini
tests/integration/: conftest.py  (+3 more)
(+7 files in other folders)
