[metadata]
name = poglink 
description = A bot that integrates the ARK Web API with Discord.
long_description = file: README.md
long_description_content_type = text/markdown
author = FM-17
author_email = info@fm17.dev,
url = https://github.com/FM-17/poglink,
license = MIT
license_files = LICENSE
project_urls =
    Bug Tracker = https://github.com/fm-17/poglink/issues
    DockerHub = https://hub.docker.com/r/fm17/poglink
classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Framework :: AsyncIO

[options]
packages = find: 
python_requires = >=3.7
install_requires = 
    discord>=1.7
    pyyaml
    python-dateutil
    jinja2
    importlib-metadata

[options.entry_points]
console_scripts = 
    poglink = poglink.main:cli